# la-housing-element

./: Create Geojson files.ipynb  pyproject.toml  shrink_geojson_file
website/: package-lock.json  package.json  tailwind.config.js
website/pages/: index.js
website/public/: out_smallest.geojson  points_smallest.geojson
