[tool.poetry]
name = "la-housing-element"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.12"
pandas = "^1.3.3"
geopandas = "^0.9.0"
matplotlib = "^3.4.3"
openpyxl = "^3.0.8"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
